feat: implement backend API with Trio Enterprise integration and monitoring endpoints

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ TRIO_API_BASE_URL=https://your-trio-api-url.com
 TRIO_API_USERNAME=your_username
 TRIO_API_PASSWORD=your_password
 TRIO_API_TOKEN=your_api_token
+TRIO_CONTACT_CENTER_ID=1
 
 # Database Configuration
 DATABASE_URL=sqlite:///./db.sqlite
